--- a/pages/panel/freelancer/style-dashboard.css
+++ b/pages/panel/freelancer/style-dashboard.css
@@ -154,6 +154,10 @@ a.logo {
 
     text-align: center;
 }
+.options > a > img { 
+    width: 10px;
+    height: 10px;
+}
 
 .sidemenu footer {
     padding: 10px 0;
@@ -189,7 +193,7 @@ a.logo {
 
 form {
     width: 100%;
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 0;
 
     display: flex;
@@ -261,6 +265,11 @@ option {
     
     border-top: 1px solid #616168;
     border-bottom: 1px solid #616168;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
 }
 
 @media screen and (max-width: 700px) {
